--- a/source/lib/core/CMakeLists.txt
+++ b/source/lib/core/CMakeLists.txt
@@ -4,8 +4,10 @@ set(source_path "${CMAKE_CURRENT_SOURCE_DIR}/source")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DCORELIBFOLDERPATH=${CMAKE_CURRENT_SOURCE_DIR}")
 set(headers ${include_path}/paths.h
             ${include_path}/simdops.h
+            ${include_path}/utils.h
             )
 set(sources ${source_path}/paths.cpp
+            ${source_path}/utils.cpp
 			)
 add_library(${target} ${sources} ${headers})
 target_include_directories(${target} PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include/")
