--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,13 +8,13 @@ if (NOT ${CMAKE_BUILD_ARCH} STREQUAL "oldarch")
 add_compile_options(-msse3 -DUSE_SSSE3 -mpopcnt -DUSE_POPCNT -DUSE_AVX2 -mavx2 -DUSE_SSE41 -msse4.1)
 endif()
 if (${CMAKE_BUILD_TYPE} STREQUAL "release")
-add_compile_options(-Wall -Wcast-qual -fno-exceptions -pedantic -Wextra -Wshadow -m64 -DUSE_PTHREADS -DIS_64BIT -msse -DUSE_SSE2 -msse2)
-add_link_options(-Wall -Wcast-qual -fno-exceptions -pedantic -Wextra -Wshadow -m64 -DUSE_PTHREADS -DIS_64BIT -msse -DUSE_SSE2 -msse2)
+add_compile_options(-Wall -Wcast-qual -fno-exceptions -Wextra -Wshadow -m64 -DUSE_PTHREADS -DIS_64BIT -msse -DUSE_SSE2 -msse2)
+add_link_options(-Wall -Wcast-qual -fno-exceptions -Wextra -Wshadow -m64 -DUSE_PTHREADS -DIS_64BIT -msse -DUSE_SSE2 -msse2)
 add_link_options(-Wl,--no-as-needed)
 add_compile_options(-flto=auto)
 add_link_options(-flto=auto)
 else()
-add_compile_options(-Wall -Wcast-qual -fno-exceptions -pedantic -Wextra -Wshadow -m64 -DUSE_PTHREADS -DIS_64BIT -msse -DUSE_SSE2 -msse2 -g)
+add_compile_options(-Wall -Wcast-qual -fno-exceptions -Wextra -Wshadow -m64 -DUSE_PTHREADS -DIS_64BIT -msse -DUSE_SSE2 -msse2 -g)
 add_link_options(-m64 -Wl,--no-as-needed)
 endif()
 add_subdirectory(source)
