--- a/source/test/CMakeLists.txt
+++ b/source/test/CMakeLists.txt
@@ -1,3 +1,4 @@
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/test/bin)
 include(GoogleTest)
 add_subdirectory(lib)
+add_subdirectory(testutils)
