--- a/source/test/testutils/CMakeLists.txt
+++ b/source/test/testutils/CMakeLists.txt
@@ -1,12 +1,10 @@
-set(target core)
+set(target testutils)
 set(include_path "${CMAKE_CURRENT_SOURCE_DIR}/include/${target}")
 set(source_path "${CMAKE_CURRENT_SOURCE_DIR}/source")
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DCORELIBFOLDERPATH=${CMAKE_CURRENT_SOURCE_DIR}")
-set(headers ${include_path}/paths.h
-            ${include_path}/simdops.h
+set(headers ${include_path}/testutils.h
             )
-set(sources ${source_path}/paths.cpp
+set(sources ${source_path}/testutils.cpp
             )
 add_library(${target} ${sources} ${headers})
 target_include_directories(${target} PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include/")
-target_link_libraries(${target} PUBLIC simde)
+target_link_libraries(${target} PUBLIC core)
