--- a/source/lib/simdops/CMakeLists.txt
+++ b/source/lib/simdops/CMakeLists.txt
@@ -1,8 +1,10 @@
 set(target simdops)
 set(include_path "${CMAKE_CURRENT_SOURCE_DIR}/include/${target}")
+set(source_path "${CMAKE_CURRENT_SOURCE_DIR}/source")
 set(headers ${include_path}/simdops.h
             )
-add_library(${target} ${headers})
-set_target_properties(${target} PROPERTIES LINKER_LANGUAGE CXX)
+set(headers ${source_path}/simdops.cpp
+            )            
+add_library(${target} ${headers} ${sources})
 target_include_directories(${target} PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include/")
 target_link_libraries(${target} PUBLIC simde)
