--- a/source/bench/CMakeLists.txt
+++ b/source/bench/CMakeLists.txt
@@ -3,7 +3,7 @@ add_subdirectory(copy)
 add_subdirectory(dilate)
 add_subdirectory(linear)
 add_subdirectory(min_max)
-add_subdirectory(min_max_global)
+add_subdirectory(min_max_h)
 add_subdirectory(qconv)
 add_subdirectory(relu)
 add_subdirectory(zero)
