Make avx2 and clang default

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,21 +1,20 @@
 cmake_minimum_required(VERSION 3.15)
-project(quantitized_convolution)
+project(qconv)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/bin)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/lib)
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/lib)
-if (NOT ${CMAKE_BUILD_ARCH} STREQUAL "oldarch")
-add_compile_options(-msse3 -DUSE_SSSE3 -mpopcnt -DUSE_POPCNT -DUSE_AVX2 -mavx2 -DUSE_SSE41 -msse4.1)
+add_compile_options(-DUSE_AVX2 -mavx2 -mpopcnt -Wall -Wcast-qual -fno-exceptions -Wextra -Wshadow)
+add_link_options(-Wall -Wcast-qual -fno-exceptions -Wextra -Wshadow)
+if (CMAKE_CXX_COMPILER STREQUAL "clang++")
+add_compile_options(-stdlib=libc++ -mllvm -align-all-blocks=5)
+add_link_options(-stdlib=libc++)
 endif()
 if (${CMAKE_BUILD_TYPE} STREQUAL "release")
-add_compile_options(-Wall -Wcast-qual -fno-exceptions -Wextra -Wshadow -m64 -DUSE_PTHREADS -DIS_64BIT -msse -DUSE_SSE2 -msse2)
-add_link_options(-Wall -Wcast-qual -fno-exceptions -Wextra -Wshadow -m64 -DUSE_PTHREADS -DIS_64BIT -msse -DUSE_SSE2 -msse2)
-add_link_options(-Wl,--no-as-needed)
 add_compile_options(-flto=auto)
 add_link_options(-flto=auto)
 else()
-add_compile_options(-Wall -Wcast-qual -fno-exceptions -Wextra -Wshadow -m64 -DUSE_PTHREADS -DIS_64BIT -msse -DUSE_SSE2 -msse2 -g)
-add_link_options(-m64 -Wl,--no-as-needed)
+add_compile_options(-g)
 endif()
 enable_testing()
 add_subdirectory(source)
