--- a/source/lib/simd/CMakeLists.txt
+++ b/source/lib/simd/CMakeLists.txt
@@ -1,9 +1,9 @@
-set(target simdops)
+set(target simd)
 set(include_path "${CMAKE_CURRENT_SOURCE_DIR}/include/${target}")
 set(source_path "${CMAKE_CURRENT_SOURCE_DIR}/source")
-set(headers ${include_path}/simdops.h
+set(headers ${include_path}/simd.h
             )
-set(headers ${source_path}/simdops.cpp
+set(headers ${source_path}/simd.cpp
             )            
 add_library(${target} ${headers} ${sources})
 target_include_directories(${target} PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include/")
