--- a/source/bench/CMakeLists.txt
+++ b/source/bench/CMakeLists.txt
@@ -1,10 +1,10 @@
-add_subdirectory(add)
-add_subdirectory(copy)
-add_subdirectory(dilate)
-add_subdirectory(linear)
-add_subdirectory(min_max)
-add_subdirectory(min_max_h)
+#add_subdirectory(add)
+#add_subdirectory(copy)
+#add_subdirectory(dilate)
+#add_subdirectory(linear)
+#add_subdirectory(min_max)
+#add_subdirectory(min_max_h)
 add_subdirectory(qconv)
-add_subdirectory(relu)
-add_subdirectory(zero)
+#add_subdirectory(relu)
+#add_subdirectory(zero)
 
