Compiling and test passing version for qconv

--- a/source/test/lib/layers/CMakeLists.txt
+++ b/source/test/lib/layers/CMakeLists.txt
@@ -9,7 +9,7 @@ add_executable(${target} ${sources})
 target_link_libraries(${target}
 	PUBLIC
 	layers
-	simdops
+	simd
 	testutils
 	PRIVATE
 	gmock-dev
