--- a/source/test/testutils/CMakeLists.txt
+++ b/source/test/testutils/CMakeLists.txt
@@ -7,4 +7,4 @@ set(sources ${source_path}/testutils.cpp
             )
 add_library(${target} ${sources} ${headers})
 target_include_directories(${target} PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include/")
-target_link_libraries(${target} PUBLIC simdops)
+target_link_libraries(${target} PUBLIC simd)
